--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
 
     
 
@@ -132,11 +132,11 @@
                     <a href="jwblog.html"><span class="mbr-iconfont mbri-bulleted-list"></span></a>
                 </div>
                 <div class="card-box align-center">
-                    <h4 class="card-title mbr-fonts-style display-7">
-                        Comprehensive Assessment Project</h4>
+                    <h4 class="card-title mbr-fonts-style display-7"><a href="ecutpccap.html">
+                        Comprehensive Assessment Project</a></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        Graduation project for the Master of Arts in English, Technical and Professional Communication at East Carolina University</p>
-                    <div class="mbr-section-btn text-center"><a href="jwblog.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="ecutpccap.html" class="btn btn-secondary display-4">
                             CAP</a></div>
                 </div>
             </div>
