create github pages

--- a/jwfreelance.html
+++ b/jwfreelance.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="features12 cid-rpaGOGcOVN" id="features12-l">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="features12 cid-rpaGOGcOVN" id="features12-l">
     
     
 
@@ -178,7 +178,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="D5h4HXsdLd4KcupNjijC1SLvAube6ca54a/Y1ok1iud83+aW+SNXM2cFhuui2xgNkhpqrnLu/+BLcbr6t6FzpOm9s9zMfqvQT7ze5bf8fSoh6EZRCNXdyRuRd7o8z6N6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C15ymROGk8iT8BVgBm8QD4ca0swyk8wpZy0Wq0wjyo9WtKVfKZF+p8RiZ946oZDwgHYbnJOYkTyfBWR3ONlP16KyPpO6HdSCGbTYZ44w06ZoEjq2MJf0kvNuH21DjKF8">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
