--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="assets/files/Warren Resume.pdf" target="_blank"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="assets/files/Warren%20Resume.pdf" target="_blank"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Resume</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="jwportfolio.html"><span class="mbri-briefcase mbr-iconfont mbr-iconfont-btn"></span>
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
 
     
 
@@ -103,12 +103,12 @@
 
             <div class="card  col-12 col-md-6 col-lg-3">
                 <div class="card-img">
-                    <span class="mbr-iconfont mbri-paperclip"></span>
+                    <a href="assets/files/Warren Resume.pdf" target="_blank"><span class="mbr-iconfont mbri-paperclip"></span></a>
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">Professional Resume</h4>
                     <p class="mbr-text mbr-fonts-style display-7">PDF version of my resume.</p>
-                    <div class="mbr-section-btn text-center"><a href="assets/files/Warren Resume.pdf" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="assets/files/Warren%20Resume.pdf" class="btn btn-secondary display-4" target="_blank">
                             PDF</a></div>
                 </div>
             </div>
