--- a/jwaboutme.html
+++ b/jwaboutme.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="assets/files/Warren Resume.pdf" target="_blank"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="assets/files/Warren%20Resume.pdf" target="_blank"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Resume</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="jwportfolio.html"><span class="mbri-briefcase mbr-iconfont mbr-iconfont-btn"></span>
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-rpaS5Xe0mQ mbr-parallax-background" id="content5-n">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-rpaS5Xe0mQ mbr-parallax-background" id="content5-n">
 
     
 
