--- a/jwfreelance.html
+++ b/jwfreelance.html
@@ -113,7 +113,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="mbr-section form1 cid-rpaNkjNCUJ" id="form1-m">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="mbr-section form1 cid-rpaNkjNCUJ" id="form1-m">
 
     
 
@@ -132,7 +132,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gkP2K7csMlQBiBWdW8/9dRNeunrN6F/dJ/SuVqD20Ud5uqj3i2f8jPstc/IJmkLliz2t40CJO4yfI1VfZLeFlIiUw0C0izyvwnLCz1xsCNp1ryfDlIJg609ZZk7fDVll">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KXQGaMtvu6l9YZIKNtKshkw96fjbIJioIcPOp7JnsXE+0uDWOrNqmv/oUo5oMz20KCuYFgTIXagJTm8qYX2VE4jvFfMdmkqk1+yBSl93DYDi9k6tguApV9zHh/rJrgQm">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -191,7 +191,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="assets/files/Warren Resume.pdf" target="_blank"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="assets/files/Warren%20Resume.pdf" target="_blank"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Resume</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="jwportfolio.html"><span class="mbri-briefcase mbr-iconfont mbr-iconfont-btn"></span>
