--- a/jwportfolio.html
+++ b/jwportfolio.html
@@ -40,7 +40,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-8">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-8">
 
     
 
@@ -66,7 +66,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="assets/files/Warren Resume.pdf" target="_blank"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="assets/files/Warren%20Resume.pdf" target="_blank"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Resume</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="jwportfolio.html"><span class="mbri-briefcase mbr-iconfont mbr-iconfont-btn"></span>
