create github pages

--- a/ecutpccap.html
+++ b/ecutpccap.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-rpaycLDmtw mbr-parallax-background" id="content5-j">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-rpaycLDmtw mbr-parallax-background" id="content5-j">
 
     
 
@@ -139,11 +139,11 @@
      
 
     <div class="container">
-        <div class="inner-container" style="width: 66%;">
-            <hr class="line" style="width: 25%;">
+        <div class="inner-container" style="width: 78%;">
+            <hr class="line" style="width: 60%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5">
-                    Thank you for perusing my hard work. Below is the portolfio segment of my comprehensive assessment project. I've assembled a collection of nine artifacts from my coursework to showcase and reflect on. As part of the requirements of the project, I've graded everything in self-reflection.</div>
-            <hr class="line" style="width: 25%;">
+                    Thank you for perusing my hard work. Below is the portolfio segment of my comprehensive assessment project. I've assembled a collection of nine artifacts from my coursework to showcase and reflect on.&nbsp;</div>
+            <hr class="line" style="width: 60%;">
         </div>
     </div>
 </section>
