create github pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
 
     
 
@@ -129,7 +129,7 @@
 
             <div class="card  col-12 col-md-6 col-lg-3">
                 <div class="card-img">
-                    <a href="jwblog.html"><span class="mbr-iconfont mbri-bulleted-list"></span></a>
+                    <a href="ecutpccap.html"><span class="mbr-iconfont mbri-bulleted-list"></span></a>
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">Comprehensive Assessment Project</h4>
@@ -353,7 +353,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             anticipated completion, M.A. in English</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"></p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Concentration in Technical and Professional Communication</p>
                     </div>
                 </div>
             </div>
