--- a/ecutpccap.html
+++ b/ecutpccap.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-rpaycLDmtw mbr-parallax-background" id="content5-j">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-rpaycLDmtw mbr-parallax-background" id="content5-j">
 
     
 
@@ -103,7 +103,7 @@
                     <div class="media-content">
                         <div class="mbr-section-text">
                             <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                               <strong>Major project.</strong>&nbsp;I have chosen an assignment I completed in my first semester in the TPC program to function as the centerpiece of my CAP. This is a literature review from a TPC research methods class. At that time, I knew very little about the field, so I chose to research a topic I knew a lot about: Google Docs!</p>
+                               <strong><a href="assets/files/OCWTs%20lit%20review_revised.pdf">Major project</a>&nbsp;</strong>(revised).&nbsp;I have chosen an assignment I completed in my first semester in the TPC program to function as the centerpiece of my CAP. This is a literature review from a TPC research methods class. At that time, I knew very little about the field, so I chose to research a topic I knew a lot about: Google Docs! (<a href="assets/files/OCWTs%20lit%20review.pdf">Original submitted</a>)</p>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7"><strong>Framing and reflections.</strong> Looking back on that literature review nearly two years later. What do I think I was thinking?</p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7"><strong><a href="assets/files/CAP%20framing%20document.pdf" target="_blank">Framing and reflections</a>.</strong> Looking back on that literature review nearly two years later. What do I think I was thinking?</p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 60%;">
