--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
 
     
 
@@ -108,7 +108,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">Professional Resume</h4>
                     <p class="mbr-text mbr-fonts-style display-7">PDF version of my resume.</p>
-                    <div class="mbr-section-btn text-center"><a href="assets/files/Warren%20Resume.pdf" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="assets/files/Warren Resume.pdf" class="btn btn-secondary display-4" target="_blank">
                             PDF</a></div>
                 </div>
             </div>
