create github pages

--- a/ecutpccap.html
+++ b/ecutpccap.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-rpaycLDmtw mbr-parallax-background" id="content5-j">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-rpaycLDmtw mbr-parallax-background" id="content5-j">
 
     
 
@@ -142,7 +142,7 @@
         <div class="inner-container" style="width: 78%;">
             <hr class="line" style="width: 60%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5">
-                    Thank you for perusing my hard work. Below is the portolfio segment of my comprehensive assessment project. I've assembled a collection of nine artifacts from my coursework to showcase and reflect on.&nbsp;</div>
+                    Thank you for perusing my hard work. Below is the portfolio segment of my comprehensive assessment project. I've assembled a collection of then artifacts from my coursework to showcase and reflect on.&nbsp;</div>
             <hr class="line" style="width: 60%;">
         </div>
     </div>
