--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
 
     
 
@@ -83,7 +83,7 @@
                     Welcome to my website!</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">
-                    My name is Julia; I'm a scholarly publishing professional with experience in managing production teams. My day is composed of making tracking and workflows easier for my employees, selecting the best gifs in the work chat, and bridging the gap between tracking numbers in spreadsheets and published scientific articles.</p>
+                    My name is Julia; I'm a scholarly publishing professional with experience in managing production teams. My day is composed of making tracking and workflows easier for my team, selecting the best gifs in the work chat, and bridging the gap between tracking numbers in spreadsheets and published scientific articles.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="jwaboutme.html">About Me</a></div>
             </div>
         </div>
@@ -352,7 +352,7 @@
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            anticipated completion, M.A. in English</h4>
+                            graduation, M.A. in English</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">Concentration in Technical and Professional Communication</p>
                     </div>
                 </div>
@@ -391,7 +391,7 @@
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Technical or copy editing</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7">
-                                    I can do a light pass for typos or a heavier pass for readability and communication</p>
+                                    I can do a light pass for typos or a heavier pass for readability and structure</p>
                             </div>
                         </div>
                     </div>
