create github pages

--- a/jwaboutme.html
+++ b/jwaboutme.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-rpaS5Xe0mQ mbr-parallax-background" id="content5-n">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section content5 cid-rpaS5Xe0mQ mbr-parallax-background" id="content5-n">
 
     
 
@@ -105,7 +105,7 @@
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">
                         Hi! I'm Julia</h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">Academic publishing professional with three years of experience in production.</p>
+                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">Publishing professional with five years of experience in scientific communication.</p>
                     </div>
 
                     <div class="block-content">
@@ -121,8 +121,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">
-                                   I attended UNC Chapel Hill and graduated with a BA in sociology and a minor in chemistry. For a while, I thought I may be a pharmacist, so I have a science background! That makes it easier for me to make sense of scientific papers.</p>
+                                <p class="block-text mbr-fonts-style display-7">I recently earned a Master of Arts in English with a concentration in Technical and Professional Communication from East Carolina University. Prior to entering the world of publishing, I attended UNC Chapel Hill and graduated with a BA in sociology and a minor in chemistry. For a while, I thought I may be a pharmacist, so I have a science background! That makes it easier for me to make sense of scientific papers.</p>
                             </div>
                         </div>
 
