--- a/jwportfolio.html
+++ b/jwportfolio.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-rpa8JyB3cU" id="content4-e">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content4 cid-rpa8JyB3cU" id="content4-e">
 
     
 
@@ -72,8 +72,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">Samples of my work</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    Portfolio from courses in Technical Communication</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Selected portfolio from courses in Technical Communication</h3>
                 
             </div>
         </div>
