--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
 
     
 
@@ -378,7 +378,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7"><a href="jwaboutme.html" target="_blank">
                         About&nbsp;Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="ecutpccap.html" target="_blank">CAP</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwfreelance.html#form1-m" target="_blank">
-                        Contact Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/Warren Resume.pdf" target="_blank">Resume</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwportfolio.html">Portfolio</a></li></ul>
+                        Contact Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/Warren Resume.pdf" target="_blank">Resume</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwportfolio.html" target="_blank">Portfolio</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
@@ -391,10 +391,6 @@
                 <div class="soc-item">
                         <a href="https://www.linkedin.com/in/julia-boyle-warren-10b43872/" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                            <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div></div>
             </div>
