--- a/jwaboutme.html
+++ b/jwaboutme.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section content5 cid-rpaS5Xe0mQ mbr-parallax-background" id="content5-n">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content5 cid-rpaS5Xe0mQ mbr-parallax-background" id="content5-n">
 
     
 
@@ -159,7 +159,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7"><a href="jwaboutme.html" target="_blank">
                         About&nbsp;Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="ecutpccap.html" target="_blank">CAP</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwfreelance.html#form1-m" target="_blank">
-                        Contact Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/Warren Resume.pdf" target="_blank">Resume</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwportfolio.html">Portfolio</a></li></ul>
+                        Contact Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/Warren Resume.pdf" target="_blank">Resume</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwportfolio.html" target="_blank">Portfolio</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
@@ -172,10 +172,6 @@
                 <div class="soc-item">
                         <a href="https://www.linkedin.com/in/julia-boyle-warren-10b43872/" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                            <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div></div>
             </div>
