--- a/ecutpccap.html
+++ b/ecutpccap.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="mbr-section content5 cid-rpaycLDmtw mbr-parallax-background" id="content5-j">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section content5 cid-rpaycLDmtw mbr-parallax-background" id="content5-j">
 
     
 
@@ -178,7 +178,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7"><a href="jwaboutme.html" target="_blank">
                         About&nbsp;Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="ecutpccap.html" target="_blank">CAP</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwfreelance.html#form1-m" target="_blank">
-                        Contact Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/Warren Resume.pdf" target="_blank">Resume</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwportfolio.html" target="_blank">Portfolio</a></li></ul>
+                        Contact Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/Warren%20Resume.pdf" target="_blank">Resume</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwportfolio.html" target="_blank">Portfolio</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
@@ -196,7 +196,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2019 Julia Warren- All Rights Reserved
+                    © Copyright 2021 Julia Warren- All Rights Reserved
                 </p>
             </div>
         </div>
