--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="header1 cid-rp4bmA8b8D" id="header16-3">
 
     
 
@@ -378,7 +378,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7"><a href="jwaboutme.html" target="_blank">
                         About&nbsp;Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="ecutpccap.html" target="_blank">CAP</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwfreelance.html#form1-m" target="_blank">
-                        Contact Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/Warren Resume.pdf" target="_blank">Resume</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwportfolio.html" target="_blank">Portfolio</a></li></ul>
+                        Contact Me</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/Warren%20Resume.pdf" target="_blank">Resume</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="jwportfolio.html" target="_blank">Portfolio</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
@@ -396,7 +396,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2019 Julia Warren- All Rights Reserved
+                    © Copyright 2021 Julia Warren- All Rights Reserved
                 </p>
             </div>
         </div>
